tests/neg/erased-object.scala
//> using options -language:experimental.erasedDefinitions

erased object Test // error
